--- a/src/sass/layout/_app.scss
+++ b/src/sass/layout/_app.scss
@@ -12,8 +12,8 @@
 }
 
 .app-layout {
-    // TODO remove this line, here just for initial development
-    height: 80vh;
+    // TODO CAMBIAR SI ES NECESARIO
+    height: 90vh;
 
     margin: 6rem 7rem;
     background-color: $color-grey-light-3;
