--- a/src/css/style.css
+++ b/src/css/style.css
@@ -397,6 +397,7 @@ body {
   position: relative;
   grid-column: nav-start/nav-end;
   grid-row: 1/-1;
+  max-height: inherit;
   background-color: #2d302e;
   color: #f1f4f2;
 }
@@ -1565,9 +1566,26 @@ body {
   padding: 2rem;
   border-radius: 1.5rem;
   border: 2px solid transparent;
+  transition: all 0.2s;
 }
 .exercise-presenter:hover, .exercise-presenter:active {
   border-color: #2FCA82;
+}
+.exercise-presenter__info-box {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: min-content;
+  grid-gap: 1rem;
+}
+.exercise-presenter__name {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #2d302e;
+}
+.exercise-presenter__description {
+  font-size: 1.6rem;
+  color: #3c3f3d;
+  hyphens: auto;
 }
 .exercise-presenter__actions-box {
   display: flex;
@@ -1603,7 +1621,7 @@ body {
 }
 
 .app-layout {
-  height: 80vh;
+  height: 90vh;
   margin: 6rem 7rem;
   background-color: #f1f4f2;
   border-radius: 5px;
@@ -1617,6 +1635,7 @@ body {
 
 .presenter-grid {
   display: grid;
+  overflow-y: scroll;
   grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
   grid-template-rows: min-content;
   grid-auto-rows: min-content;
@@ -1745,9 +1764,19 @@ body {
   padding: 4rem 0;
   padding-right: 3rem;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: [search-start] 1fr [search-end order-by-start] 10% [order-by-end];
   grid-template-rows: [search-start] 1fr [search-end new-start] 1fr [new-end content-start] 80% [content-end];
   grid-row-gap: 3rem;
+}
+
+.exercises-page__button-new {
+  grid-column: search-start/ordery-by-end;
+  grid-row: new-start/new-end;
+}
+
+.presenter-grid--exercises {
+  grid-column: search-start/ordery-by-end;
+  grid-row: content-start/content-end;
 }
 
 /*# sourceMappingURL=style.css.map */
