--- a/src/sass/components/_exercise-presenter.scss
+++ b/src/sass/components/_exercise-presenter.scss
@@ -14,9 +14,30 @@
 
     border: 2px solid transparent;
 
+    transition: all 0.2s;
+
     &:hover,
     &:active {
         border-color: $color-primary;
+    }
+
+    &__info-box {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-rows: min-content;
+        grid-gap: 1rem;
+    }
+
+    &__name {
+        font-size: 2rem;
+        font-weight: 600;
+        color: $color-grey-dark-5;
+    }
+
+    &__description {
+        font-size: 1.6rem;
+        color: $color-grey-dark-4;
+        hyphens: auto;
     }
 
     &__actions-box {
