--- a/src/sass/pages/_exercises-page.scss
+++ b/src/sass/pages/_exercises-page.scss
@@ -8,7 +8,17 @@
     padding-right: 3rem;
 
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: [search-start] 1fr [search-end order-by-start] 10% [order-by-end];
     grid-template-rows: [search-start] 1fr [search-end new-start] 1fr [new-end content-start] 80% [content-end];
     grid-row-gap: 3rem;
+}
+
+.exercises-page__button-new {
+    grid-column: search-start / ordery-by-end;
+    grid-row: new-start / new-end;
+}
+
+.presenter-grid--exercises {
+    grid-column: search-start / ordery-by-end;
+    grid-row: content-start / content-end;
 }
