--- a/src/sass/components/_popup-edit-name-and-description.scss
+++ b/src/sass/components/_popup-edit-name-and-description.scss
@@ -3,8 +3,11 @@
 .popup-name-desc {
     z-index: 1000;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 40;
+    right: 40;
+
+    $normal-border-color: $color-grey-dark-1;
+    $hover-border-color: $color-primary-dark;
 
     display: grid;
     grid-template-columns: [input-start] 1fr [input-end actions-start] min-content [actions-end];
@@ -14,13 +17,108 @@
     padding: 2rem 2.5rem;
 
     background-color: $color-grey-light-2;
-    border: 2px solid $color-grey-dark-1;
+    border: 2px solid $normal-border-color;
     box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
 
     transition: all 0.2s;
 
     &:hover {
-        border-color: $color-primary-dark;
+        border-color: $hover-border-color;
+    }
+
+    &:hover &__box-arrow {
+        background-color: $hover-border-color;
+    }
+
+    &__box-arrow {
+        // This is the border of the arrow
+        position: absolute;
+        width: 2rem;
+        height: 2rem;
+        background-color: $normal-border-color;
+        clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+        transition: all 0.2s;
+
+        // this is the background of the arrow
+        &::before {
+            content: "";
+            position: absolute;
+            width: inherit;
+            height: inherit;
+            background-color: $color-grey-light-2;
+            clip-path: inherit;
+            transform: translateY(5px) scale(1.06);
+        }
+
+        &--top-right {
+            top: -2rem;
+            right: 2rem;
+        }
+
+        &--top-center {
+            top: -2rem;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        &--top-left {
+            top: -2rem;
+            left: 2rem;
+        }
+
+        &--bottom-right {
+            bottom: -2rem;
+            right: 2rem;
+            transform: rotateZ(180deg);
+        }
+
+        &--bottom-center {
+            bottom: -2rem;
+            left: 50%;
+            transform: translateX(-50%) rotateZ(180deg);
+        }
+
+        &--bottom-left {
+            bottom: -2rem;
+            left: 2rem;
+            transform: rotateZ(180deg);
+        }
+
+        &--left-top {
+            top: 2rem;
+            left: -2rem;
+            transform: rotateZ(-90deg);
+        }
+
+        &--left-center {
+            top: 50%;
+            left: -2rem;
+            transform: translateY(-50%) rotateZ(-90deg);
+        }
+
+        &--left-bottom {
+            bottom: 2rem;
+            left: -2rem;
+            transform: rotateZ(-90deg);
+        }
+
+        &--right-top {
+            top: 2rem;
+            right: -2rem;
+            transform: rotateZ(90deg);
+        }
+
+        &--right-center {
+            top: 50%;
+            right: -2rem;
+            transform: translateY(-50%) rotateZ(90deg);
+        }
+
+        &--right-bottom {
+            bottom: 2rem;
+            right: -2rem;
+            transform: rotateZ(90deg);
+        }
     }
 
     &__icons-area {
