--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1571,6 +1571,7 @@ body {
 }
 .exercise-presenter:hover, .exercise-presenter:active {
   border-color: #2FCA82;
+  box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.05);
 }
 .exercise-presenter__info-box {
   display: grid;
@@ -1762,6 +1763,96 @@ body {
 .popup-name-desc__label {
   font-weight: 400;
   margin-bottom: 0.5rem;
+}
+
+.template-presenter {
+  display: grid;
+  grid-template-columns: [info-start] 1fr [info-end actions-start] min-content [actions-end];
+  grid-template-rows: [info-start] 1fr [info-end launch-start] min-content [launch-end];
+  grid-column-gap: 2rem;
+  grid-row-gap: 3.5rem;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 1.5rem;
+  border: 2px solid transparent;
+  transition: all 0.2s;
+}
+.template-presenter:hover, .template-presenter:active {
+  border-color: #2FCA82;
+  box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.05);
+}
+.template-presenter__info-box {
+  grid-column: info-start/info-end;
+  grid-row: info-start/info-end;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: min-content;
+  grid-gap: 1rem;
+}
+.template-presenter__actions-box {
+  grid-column: actions-start/actions-end;
+  grid-row: info-start/info-end;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.template-presenter__start-box {
+  grid-column: info-start/actions-end;
+  grid-row: launch-start/launch-end;
+  justify-self: center;
+}
+.template-presenter__icon-box {
+  width: 2.5rem;
+  height: 2.5rem;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.template-presenter__icon-box > * {
+  width: 100%;
+  height: 100%;
+}
+.template-presenter__icon-box--delete:hover {
+  color: #ea704e;
+}
+.template-presenter__icon-box--duplicate:hover {
+  color: #00c3d0;
+}
+.template-presenter__icon-box--edit:hover {
+  color: #2FCA82;
+}
+.template-presenter__name {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #2d302e;
+}
+.template-presenter__description {
+  font-size: 1.6rem;
+  color: #3c3f3d;
+  hyphens: auto;
+}
+.template-presenter__actions-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.template-presenter__launch-template {
+  padding: 2rem 8rem;
+  border-radius: 1rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #2d302e;
+  background-color: #f1f4f2;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.template-presenter__launch-template:hover {
+  color: #fff;
+  background-color: #2FCA82;
+}
+.template-presenter__launch-template:active {
+  background-color: #03B670;
 }
 
 .behind-app {
