--- a/src/sass/components/_exercise-presenter.scss
+++ b/src/sass/components/_exercise-presenter.scss
@@ -20,6 +20,7 @@
     &:hover,
     &:active {
         border-color: $color-primary;
+        box-shadow: 0 .5rem 2rem rgba($color-black, 0.05);
     }
 
     &__info-box {
