--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -17,3 +17,4 @@
 @forward "search-bar";
 @forward "exercise-presenter";
 @forward "popup-edit-name-and-description";
+@forward "template-presenter";
