--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -18,3 +18,4 @@
 @forward "exercise-presenter";
 @forward "popup-edit-name-and-description";
 @forward "template-presenter";
+@forward "popup-rows";
