--- a/src/sass/components/_template-creator.scss
+++ b/src/sass/components/_template-creator.scss
@@ -1,3 +1,9 @@
 @use "../abstracts/" as *;
 
-.template-creator {}
+.template-creator {
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2rem;
+    padding: 2rem;
+}
