--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1625,7 +1625,13 @@ body {
   background-color: #dde0de;
   border: 2px solid #AAADAB;
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
-  transition: border 0.2s;
+  opacity: 1;
+  visibility: visible;
+  transition: border 0.2s ease, opacity 0.1s ease, visibility 0.1s ease;
+}
+.popup-name-desc--hidden {
+  opacity: 0;
+  visibility: hidden;
 }
 .popup-name-desc:hover {
   border-color: #03B670;
