Available exercises are shown when creating a template

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1612,6 +1612,13 @@ body {
   color: #2FCA82;
 }
 
+.exercise-presenter--no-actions .exercise-presenter__actions-box {
+  display: none;
+}
+.exercise-presenter--no-actions .exercise-presenter__info-box {
+  grid-column: 1/-1;
+}
+
 .popup-name-desc {
   z-index: 1000;
   position: absolute;
@@ -1901,7 +1908,7 @@ body {
   display: grid;
   padding: 4rem;
   grid-template-columns: [exercises-start] 1fr [exercises-end templates-start] 1fr [templates-end];
-  grid-template-rows: [name-start] min-content [name-end description-start] min-content [description-end presenter-start] 1fr [presenter-end];
+  grid-template-rows: [name-start] min-content [name-end description-start] min-content [description-end spacing-start] 4rem [spacing-end presenter-start] 1fr [presenter-end];
   grid-row-gap: 2rem;
   grid-column-gap: 8rem;
 }
@@ -1918,6 +1925,9 @@ body {
 }
 .template-creator__available-exercises-box {
   grid-row: presenter-start/presenter-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 2rem;
 }
 .template-creator__used-exercises-box {
   grid-row: presenter-start/presenter-end;
