--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1560,7 +1560,7 @@ body {
 .exercise-presenter {
   position: relative;
   display: grid;
-  grid-template-columns: [info-start] 1fr [info-end actions-start] min-content [actions-end];
+  grid-template-columns: [order-start] min-content [order-end info-start] 1fr [info-end sets-start] min-content [sets-end actions-start] min-content [actions-end];
   grid-template-rows: [presenter-top] 1fr [presenter-bottom];
   grid-column-gap: 2rem;
   background-color: #fff;
@@ -1574,6 +1574,8 @@ body {
   box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.05);
 }
 .exercise-presenter__info-box {
+  grid-column: order-start/actions-start;
+  grid-row: presenter-top/presenter-bottom;
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: min-content;
@@ -1590,6 +1592,8 @@ body {
   hyphens: auto;
 }
 .exercise-presenter__actions-box {
+  grid-column: actions-start/actions-end;
+  grid-row: presenter-top/presenter-bottom;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1611,12 +1615,62 @@ body {
 .exercise-presenter__icon-box--edit:hover {
   color: #2FCA82;
 }
+.exercise-presenter__icon-box--remove-from-template {
+  display: none;
+}
+.exercise-presenter__icon-box--remove-from-template:hover {
+  color: #ea704e;
+}
+.exercise-presenter__sets-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.exercise-presenter__input-sets {
+  max-width: 7rem;
+  border: 1px solid #858886;
+  text-align: center;
+  appearance: textfield;
+}
 
 .exercise-presenter--no-actions .exercise-presenter__actions-box {
   display: none;
 }
 .exercise-presenter--no-actions .exercise-presenter__info-box {
   grid-column: 1/-1;
+}
+
+.exercise-presenter--creating-template .exercise-presenter__order-box {
+  grid-column: order-start/order-end;
+  grid-row: presenter-top/presenter-bottom;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.exercise-presenter--creating-template .exercise-presenter__order {
+  font-size: 2.5rem;
+  font-weight: 400;
+  font-family: inherit;
+  color: #575a58;
+  padding: 0 1rem;
+}
+.exercise-presenter--creating-template .exercise-presenter__info-box {
+  grid-column: info-start/info-end;
+}
+.exercise-presenter--creating-template .exercise-presenter__sets-box {
+  grid-column: sets-start/sets-end;
+}
+.exercise-presenter--creating-template .exercise-presenter__icon-box--remove-from-template {
+  display: inline-block;
+}
+.exercise-presenter--creating-template .exercise-presenter__icon-box--edit {
+  display: none;
+}
+.exercise-presenter--creating-template .exercise-presenter__icon-box--delete {
+  display: none;
+}
+.exercise-presenter--creating-template .exercise-presenter__actions-box {
+  justify-content: center;
 }
 
 .popup-name-desc {
@@ -1931,6 +1985,10 @@ body {
 }
 .template-creator__used-exercises-box {
   grid-row: presenter-start/presenter-end;
+  display: grid;
+  grid-template-rows: min-content;
+  grid-auto-rows: min-content;
+  grid-gap: 2rem;
 }
 .template-creator__input-box {
   display: flex;
