--- a/src/sass/components/_exercise-presenter.scss
+++ b/src/sass/components/_exercise-presenter.scss
@@ -97,12 +97,16 @@
     }
 
     &__input-sets {
-        max-width: 7rem;
+        width: 9rem;
         border: 1px solid $color-grey-dark-2;
         text-align: center;
 
         // Remove arrows from number input
         appearance: textfield;
+
+        &:invalid {
+            border-color: $color-red;
+        }
     }
 }
 
