Set up for starting styling home page.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2336,4 +2336,11 @@ body {
   grid-row: content-start/content-end;
 }
 
+.home-page {
+  grid-column: page-start/page-end;
+  grid-row: page-top/page-bottom;
+  padding: 4rem 0;
+  padding-right: 3rem;
+}
+
 /*# sourceMappingURL=style.css.map */
