--- a/src/sass/pages/_home-page.scss
+++ b/src/sass/pages/_home-page.scss
@@ -7,4 +7,11 @@
     padding: 4rem 0;
     padding-right: 3rem;
 
+    // TODO revisar. Altura necesita ser fija para las gráficas responsive
+    // La anchura parece que también, aunque no lo ponga en la documentación.
+    // Esto está aquí temporamente. Realmente tendré que fijar estas dimensiones en el
+    // componente padre de las gráficas, que será algún hijo del contenedor que tenga esta clase
+    height: 80vh;
+    width: 70vw;
+
 }
